--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {},
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.53.2",
-    "@types/node": "^24.0.10",
-    "cypress": "^14.5.1"
+    "@types/node": "^24.0.10"
+  },
+  "dependencies": {
+    "dotenv": "^17.1.0"
   }
 }
